--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@ Hello there, awesome person!
       welcome to KWTK!
       <img src="https://www.instagram.com/p/CAN3ufjjQaC/?utm_source=ig_web_copy_link">
     </h1>
-    
+    <h2>Here are some reference sites we use: 
+      <ul>
+        <li>sally'sbakingaddictions.com</li>
+        <li>tasty.com</li>
+        <li>yummy.com</li>
+      </ul>
+    </h2>
+     
   </body>
   
 </html>
