--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <body>
     
     <head> 
+      <link rel="stylesheet" href="style.css">
     <title>Cooking with the Kasukus</title>
   </head>
     
